.github/player-market-sell-fee-error.txt
  File "/tmp/apply-player-market-sell-fee.py", line 23
    write(path, content.replace(indented_old, _indent_block(new, width), 1))
                                                                            ^
IndentationError: unindent does not match any outer indentation level
